--- a/index.html
+++ b/index.html
@@ -38,14 +38,12 @@
                 <h3>Ningún mensaje fue <br> encontrado</h3>
                 <p>Ingresa el texto que desees encriptar o <br> desencriptar,</p>
             </div>
-            <div class="contenedorDeResultado">
-                <p class="TextoResultado">
-                    holis
-                </p>
+            <div class="contenedorCopiar">
+                <input type="button" name="btn-copiar" value="Copiar">
             </div>
-        </section>
-        <section class="seccionN3">
-
+            <div class="contenedorResultado">
+                <p class="textoResultado"></p>
+            </div>
         </section>
     </main>
 
