--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </head>
 <body>
     <header>
-        <img class="Logo" src="imagenes/Logo.png" alt="">        
+        <img class="logo" src="imagenes/Logo@2x.png" alt="">        
     </header>
 
     <main> 
         <section class="seccionN1">
             <div class="contenedorDeTexto">
-                <textarea class="cajaTexto" placeholder="Ingrese el texto que deseas encriptar porfavor"></textarea>
+                <textarea class="cajaTexto" placeholder="Ingrese el texto que deseas encriptar"></textarea>
             </div>
             <div class="alerta">
                 <img src="imagenes/Alerta.png" alt="alerta">
