Avance #3 de CSS
Pequeño avance desde el trabajo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="alerta">
                 <img src="imagenes/Alerta.png" alt="alerta">
-                <p>Solo letras minúsculas y sin acentos</p>
+                <p class="instruccion">Solo letras minúsculas y sin acentos</p>
             </div>
             <div class="contenedorBotones">
                 <input type="button" class="btn-encriptador" value="Encriptar">
