--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 <img src="imagenes/Muñeco.png" alt="munieco">
             </div>
             <div class="contenedorDeParrafo">
-                <h3>Ningún mensaje fue <br> encontrado</h3>
-                <p>Ingresa el texto que desees encriptar o <br> desencriptar,</p>
+                <h3 class="resultado">Ningún mensaje fue <br> encontrado</h3>
+                <p class="parrafito">Ingresa el texto que desees encriptar o <br> desencriptar,</p>
             </div>
             <div class="contenedorCopiar">
-                <input type="button" name="btn-copiar" value="Copiar">
+                <input type="button" class="btn-copiar" value="Copiar" >
             </div>
             <div class="contenedorResultado">
                 <p class="textoResultado"></p>
