--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de Texto</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
     <link href="https://fonts.googleapis.com/css2? family=Inter&family=Montserrat:wght@300&display=swap" rel="stylesheet">
     <!--La fuente sacada de GOOGLE API FONTS-->
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +18,7 @@
     <main> 
         <section class="seccionN1">
             <div class="contenedorDeTexto">
-                <textarea class="cajaTexto" placeholder="Ingrese el texto que deseas encriptar"></textarea>
+                <textarea class="cajaTexto" placeholder="Ingrese el texto que deseas encriptar "></textarea>
             </div>
             <div class="alerta">
                 <img src="imagenes/Alerta.png" alt="alerta">
@@ -35,18 +34,17 @@
                 <img src="imagenes/Muñeco.png" alt="munieco">
             </div>
             <div class="contenedorDeParrafo">
-                <h3 class="resultado">Ningún mensaje fue <br> encontrado</h3>
-                <p class="parrafito">Ingresa el texto que desees encriptar o <br> desencriptar,</p>
+                <h3>Ningún mensaje fue <br> encontrado</h3>
+                <p>Ingresa el texto que desees encriptar o <br> desencriptar,</p>
             </div>
             <div class="contenedorCopiar">
                 <input type="button" class="btn-copiar" value="Copiar" >
             </div>
             <div class="contenedorResultado">
-                <p class="textoResultado"></p>
+                <p class="texoResultado"></p>
             </div>
         </section>
     </main>
-
-    <footer></footer>
+    <script src="script.js"></script>
 </body>
 </html>
