--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </div>
         </section>
         <section class="seccionN2">
-            <div class="contenedorMunieco">
-                <img src="imagenes/Muñeco.png" alt="munieco">
+            <div class="contenedorMuneco">
+                <img src="imagenes/Muñeco.png" alt="muneco">
             </div>
             <div class="contenedorDeParrafo">
                 <h3>Ningún mensaje fue <br> encontrado</h3>
@@ -41,7 +41,7 @@
                 <input type="button" class="btn-copiar" value="Copiar" >
             </div>
             <div class="contenedorResultado">
-                <p class="texoResultado"></p>
+                <p class="textoResultado"></p>
             </div>
         </section>
     </main>
