--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="contenedorDeParrafo">
                 <h3>Ningún mensaje fue <br> encontrado</h3>
-                <p>Ingresa el texto que desees encriptar o <br> desencriptar,</p>
+                <p>Ingresa el texto que desees encriptar o <br> desencriptar</p>
             </div>
             <div class="contenedorCopiar">
                 <input type="button" class="btn-copiar" value="Copiar" >
